--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ body {
     left: 0px;
 
 }
-#page-home{
+#page-home, #page-scrum{
     width: 1090px;
     height: calc(100% - 154px);
     min-height: 500px;
@@ -149,27 +149,29 @@ body {
 #menu:hover{
     background-color: rgb(0,0,0,0.8);
 }
+
 #menu_options{
     margin-top: 8px;
     width: 100%;
     height: 100%;
     display: none;
-
-
 }
-.options{
+#menu_options a{
     margin-top: 5px;
     text-align: left;
-    width: 100%;
+    width: 290px;
     color: #fff;
     font-size: 16px;
+    position: relative;
+    left:10px;
     font-weight: normal;
     background-color: transparent;
     border: none;
-
+    float: left;
 }
-.options:hover{
+#menu_options a:hover{
     text-decoration: underline;
+    color:#FF4500;
 }
 
 
@@ -179,9 +181,9 @@ body {
         width: 80%;
         left: 10%;
     }
-    #page-home{
-        width: 80%;
-        left: 10%;
+    #page-home, #page-scrum{
+        width: 100%;
+        left: 0px;
     }
 }
 
