--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,11 @@ body {
     width: 100%;
     height: 102px;
     background-color: #2c2c2c;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     border-bottom: 2px solid #A9A9A9;
+    z-index: 3;
 
 }
 #rodape{
@@ -89,13 +90,21 @@ body {
     left: 0px;
 
 }
-#page-home, #page-scrum{
+#page-home{
     width: 1090px;
     height: calc(100% - 154px);
     min-height: 500px;
     position: absolute;
     top:102px;
     left: calc(50% - 545px);
+}
+#page-scrum{
+    width: 100%;
+    height: calc(100% - 154px);
+    min-height: 600px;
+    position: absolute;
+    top:102px;
+    left: 0px;
 }
 #page-home img{
     width: 100%;
@@ -173,7 +182,41 @@ body {
     text-decoration: underline;
     color:#FF4500;
 }
+#page-scrum p{
+    width: 1090px;
+    font-size: 12px;
+    margin-top: 5px;
+    position: relative;
+    left: calc(50% - 545px);
+    top: 70px;
+    text-align: justify;
+    text-indent: 3em;
+}
+#page-scrum h1, #page-scrum h2  {
+    width: 1090px;
+    text-indent: 2.3em;
+    text-align: center;
+    position: relative;
+    top: 70px;
+    left: calc(50% - 545px);
+    font-weight: bold;
+    margin-top: 10px;
+}
+#page-scrum a label{
 
+    width: 1090px; 
+    text-indent: 3em;
+    position: relative;
+
+    top: 70px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 12px;
+
+}
+#page-scrum a label:hover{
+    text-decoration: underline;  
+}
 
 
 @media(max-width: 1090px){
@@ -181,11 +224,37 @@ body {
         width: 80%;
         left: 10%;
     }
-    #page-home, #page-scrum{
+    #page-home{
         width: 100%;
         left: 0px;
     }
+    #page-scrum{
+        height: 700px;
+        left: 0px;
+    }
+    #page-scrum p{
+        width: 80%;
+        left: 10%;
+    }
+    #page-scrum h1, #page-scrum h2  {
+        width: 80%;
+        left: 10%;
+    }
+
 }
+@media(max-width: 860px){
+    #page-scrum{
+        height: 800px;
+        left: 0px;
+    }   
+}
+@media(max-width: 700px){
+    #page-scrum{
+        height: 900px;
+        left: 0px;
+    }   
+}
+
 
 @media(max-width: 550px){
     #dados label{
@@ -196,6 +265,10 @@ body {
     #cabecalho_I label{
         text-align: left;
     }
+    #page-scrum{
+        height: 1000px;
+        left: 0px;
+    }  
 }
 @media(max-width: 500px){
     #rodape{
@@ -206,7 +279,17 @@ body {
         top: 15px;
         transition: 1s;
     }
+    #page-scrum{
+        height: 1030px;
+        left: 0px;
+    } 
 
+}
+@media(max-width: 476px){
+    #page-scrum{
+        height: 1100px;
+        left: 0px;
+    }  
 }
 @media(max-height: 654px){
     #rodape{
