--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,22 @@ body {
     top:102px;
     left: 0px;
 }
+#page-dsdm{
+    width: 100%;
+    height: 1750px;
+    min-height: 600px;
+    position: absolute;
+    top:102px;
+    left: 0px;
+}
+#page-fdd{
+    width: 100%;
+    height: 1750px;
+    min-height: 600px;
+    position: absolute;
+    top:102px;
+    left: 0px;
+}
 #page-home img{
     width: 100%;
     height: 100%;
@@ -192,7 +208,18 @@ body {
     text-align: justify;
     text-indent: 3em;
 }
-#page-scrum h1, #page-scrum h2  {
+#page-dsdm p, #page-fdd p{
+    width: 1090px;
+    font-size: 12px;
+    margin-top: 5px;
+    position: relative;
+    left: calc(50% - 545px);
+    top: 70px;
+    text-align: justify;
+    text-indent: 3em;
+    font-weight: normal;
+
+}#page-scrum h1, #page-scrum h2 {
     width: 1090px;
     text-indent: 2.3em;
     text-align: center;
@@ -200,22 +227,44 @@ body {
     top: 70px;
     left: calc(50% - 545px);
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 30px;
+
 }
-#page-scrum a label{
+#page-dsdm h1, #page-dsdm h2, #page-fdd h1, #page-fdd h2{
+    width: 1090px;
+    text-indent: 2.3em;
+    text-align: left;
+    position: relative;
+    top: 70px;
+    left: calc(50% - 545px);
+    font-weight: bold;
+    margin-top: 30px;
+}
+#page-scrum a label, #page-dsdm a label, #page-fdd a label{
 
     width: 1090px; 
     text-indent: 3em;
     position: relative;
 
     top: 70px;
-    margin-top: 10px;
+    margin-top: 5px;
     text-align: center;
     font-size: 12px;
 
 }
-#page-scrum a label:hover{
+
+#page-scrum a label:hover, #page-dsdm a label:hover, #page-fdd a label:hover{
     text-decoration: underline;  
+}
+#imgFDD{
+    position: relative;
+    top: 70px;
+    margin-top: 30px;
+}
+#imgdsdm{
+    position: relative;
+    top: 70px;
+    margin-top: 30px;
 }
 
 
@@ -240,19 +289,70 @@ body {
         width: 80%;
         left: 10%;
     }
-
+    #page-dsdm{
+        height: 1850px;
+        left: 0px;
+    }
+    #page-dsdm p{
+        width: 80%;
+        left: 10%;
+    }
+    #page-dsdm h1, #page-dsdm h2  {
+        width: 80%;
+        left: 10%;
+    }
+    #page-fdd{
+        height: 2000px;
+        left: 0px;
+    }
+    #page-fdd p{
+        width: 80%;
+        left: 10%;
+    }
+    #page-fdd h1, #page-fdd h2  {
+        width: 80%;
+        left: 10%;
+    }
+    #page-xg{
+        height: 1230px;
+        left: 0px;
+    }
+    #page-xg p{
+        width: 80%;
+        left: 10%;
+    }
+    #page-xg h1, #page-xg h2  {
+        width: 80%;
+        left: 10%;
+    }
 }
 @media(max-width: 860px){
     #page-scrum{
         height: 800px;
         left: 0px;
+    }
+    #page-dsdm{
+        height: 1870px;
+        left: 0px;
+    } 
+    #page-fdd{
+        height: 2200px;
+        left: 0px;           
     }   
 }
 @media(max-width: 700px){
     #page-scrum{
         height: 900px;
         left: 0px;
-    }   
+    } 
+    #page-dsdm{
+        height: 2000px;
+        left: 0px;           
+    }  
+    #page-fdd{
+        height: 2450px;
+        left: 0px;           
+    } 
 }
 
 
@@ -268,7 +368,16 @@ body {
     #page-scrum{
         height: 1000px;
         left: 0px;
+    } 
+    #page-dsdm{
+        height: 2100px;
+        left: 0px;
+    }
+    #page-fdd{
+        height: 2570px;
+        left: 0px;           
     }  
+
 }
 @media(max-width: 500px){
     #rodape{
@@ -279,17 +388,27 @@ body {
         top: 15px;
         transition: 1s;
     }
-    #page-scrum{
-        height: 1030px;
+    #page-dsdm{
+        height: 2150px;
         left: 0px;
+    }
+    #page-fdd{
+        height: 2900px;
+        left: 0px;           
     } 
+
 
 }
 @media(max-width: 476px){
     #page-scrum{
         height: 1100px;
         left: 0px;
-    }  
+    }
+    #page-dsdm{
+        height: 2200px;
+    }
+
+
 }
 @media(max-height: 654px){
     #rodape{
