--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ body {
     position: absolute;
     left: 0px;
     top:20px;
-    color: #fff;
+    color: #008080;
     font-size: 30px;
     z-index: 2;
     text-shadow: 2px 2px 2px #2c2c2c;
