--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,10 @@ body {
 
 }
 @media(max-width: 500px){
+    #page-scrum{
+        height: 1300px;
+        left: 0px;
+    }
     #rodape{
         height: 80px;
         transition: 1s;
@@ -393,7 +397,7 @@ body {
         left: 0px;
     }
     #page-fdd{
-        height: 2900px;
+        height: 3000px;
         left: 0px;           
     } 
 
@@ -401,14 +405,29 @@ body {
 }
 @media(max-width: 476px){
     #page-scrum{
-        height: 1300px;
+        height: 1400px;
         left: 0px;
     }
     #page-dsdm{
         height: 2200px;
     }
     #page-fdd{
-        height: 3300px;
+        height: 3400px;
+        left: 0px;           
+    } 
+
+
+}
+@media(max-width: 300px){
+    #page-scrum{
+        height: 1800px;
+        left: 0px;
+    }
+    #page-dsdm{
+        height: 2400px;
+    }
+    #page-fdd{
+        height: 3600px;
         left: 0px;           
     } 
 
