--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,7 @@ body {
     width: 70px;
     height: 30px;
     border-radius: 10px;
+    background-color: #32CD32;
 
 }
 #conteudo button:hover{
